updating ML model

--- a/PFATeam/results/analysis.ipynb
+++ b/PFATeam/results/analysis.ipynb
@@ -333,16 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 244,
    "outputs": [
-    {
-     "data": {
-      "text/plain": "<AxesSubplot:title={'center':'Comparaison of different algorithms on socf-konect.edges'}, xlabel='Time', ylabel='Current Memory'>"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": "<Figure size 1512x576 with 1 Axes>",
@@ -354,7 +346,8 @@
    ],
    "source": [
     "fig,ax=plt.subplots(figsize=(21,8))\n",
-    "compare_algorithms([aws_parallel,aws_sequential],\"socf-konect.edges\",ax)"
+    "compare_algorithms([aws_parallel,aws_sequential],\"socf-konect.edges\",ax)\n",
+    "fig.savefig(\"bad_threads.png\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -1138,19 +1131,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 273,
    "outputs": [
     {
-     "data": {
-      "text/plain": "(0.9648242697652087, 0.9666045931382179)"
-     },
-     "execution_count": 242,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Number Of Threads', 'Number Of Edges', 'Number Of Nodes'], ['Number Of Threads', 'Number Of Edges', 'Number Of Nodes', 'Density', 'Max Degree', 'Min Degree', 'Average Degree'], ['Number Of Threads', 'Number Of Edges', 'Number Of Nodes', 'Density', 'Max Degree', 'Min Degree', 'Average Degree', 'Assortativity', 'Number Triangles', 'Average Number Of Triangles', 'Max Number Of Triangles', 'Average Clustering Coef', 'Fraction Closed Triangles', 'Max K Core', 'Lower Bound Max Clique']]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ramizouari/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
-    "model.score_independently(X1_test,y1_test,X2_test,y2_test)"
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "def test_graph_prediction_models(memory_models,time_models,features_lists,use_cross_val=True,test_size=None,cv=None):\n",
+    "    n1=len(memory_models)\n",
+    "    n2=len(time_models)\n",
+    "    n3=len(features_lists)\n",
+    "    M=np.zeros([n1,n3])\n",
+    "    T=np.zeros([n2,n3])\n",
+    "    for i,memory_model in enumerate(memory_models):\n",
+    "        for k,features in enumerate(features_lists):\n",
+    "            U1=graphs_creation_ml[features+[\"Average Memory\"]].dropna()\n",
+    "            X1=U1[U1.columns[:-1]]\n",
+    "            y1=U1[\"Average Memory\"]/1e9\n",
+    "            if use_cross_val:\n",
+    "                M[i,k]=cross_val_score(memory_model,X1,y1).mean()\n",
+    "            else:\n",
+    "                X1_train,X1_test,y1_train,y1_test=train_test_split(X1,y1,test_size=test_size)\n",
+    "                M[i,k]=memory_model.fit(X1_train,y1_train).score(X1_test,y1_test)\n",
+    "    for j,time_model in enumerate(time_models):\n",
+    "        for k,features in enumerate(features_lists):\n",
+    "            U2=graphs_creation_ml[features+[\"Average Time\"]].dropna()\n",
+    "            X2=U2[U2.columns[:-1]]\n",
+    "            y2=U2[\"Average Time\"]/1e3\n",
+    "            if use_cross_val:\n",
+    "                T[j,k]=cross_val_score(time_model,X2,y2).mean()\n",
+    "            else:\n",
+    "                X2_train,X2_test,y2_train,y2_test=train_test_split(X2,y2,test_size=test_size)\n",
+    "                T[j,k]=time_model.fit(X2_train,y2_train).score(X2_test,y2_test)\n",
+    "    return M,T\n",
+    "\n",
+    "\n",
+    "models=[LinearSVR(),LinearRegression(),DecisionTreeRegressor(max_depth=7),RandomForestRegressor(max_depth=7)]\n",
+    "model_names=[\"LinearSVR\",\"LinearRegression\",\"DecisionTreeRegressor\",\"RandomForestRegressor\"]\n",
+    "memory_models=[Pipeline([(\"scaler\",MinMaxScaler()),(\"predictor\",model)]) for model in models]\n",
+    "time_models=memory_models.copy()\n",
+    "incremental_features=[evident_features+hardware_feature,calculable_features,hard_features]\n",
+    "feature_sets_names=[\"Evident Features\",\"Calculable Features\",\"Hard Features\"]\n",
+    "features_lists=[evident_features]\n",
+    "for i in range(1,len(incremental_features)):\n",
+    "    features_lists.append(features_lists[-1]+incremental_features[i])\n",
+    "print(features_lists)\n",
+    "memory_models_results,time_models_results=test_graph_prediction_models(memory_models,time_models,features_lists,test_size=.3)\n",
+    "memory_models_results=pd.DataFrame(memory_models_results,index=model_names,columns=feature_sets_names)\n",
+    "time_models_results=pd.DataFrame(time_models_results,index=model_names,columns=feature_sets_names)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1161,19 +1204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 271,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 2, 15,  6,  0, 10,  6, 10,  0, 10,  2, 15,  0,  5, 15,  0,  0, 10,\n       15,  6, 15, 10, 15, 10, 10,  5, 15, 15,  3,  2,  2, 15,  2,  3, 15,\n       15,  3, 15, 10,  6,  2, 10, 10,  2, 15,  0,  6, 15,  0,  6, 15, 15,\n       15, 15, 15, 15,  2, 10,  2,  6, 10,  3, 15,  0,  2, 15, 10,  0, 10,\n        0,  2,  6,  6,  0, 10, 10,  2, 10,  6, 10,  2, 13, 15,  6,  2,  0,\n       10,  0,  2,  6,  2, 10, 15,  0,  6, 15, 10,  3,  6, 15, 10,  0,  2,\n       10, 10,  0, 10, 15,  3,  0,  0,  2, 15, 15,  6,  2,  3,  6,  2,  2,\n       15,  0,  6,  0, 10,  0, 15, 10, 10,  2,  6, 15,  6, 15,  2,  0,  3,\n       15,  6,  2, 15,  2, 15,  2, 13,  6, 10, 10, 10,  0, 10, 15,  6, 10,\n       10,  3,  6, 15,  6, 15,  0, 15,  2,  0,  3, 15,  8, 15,  2, 15, 15,\n        6, 15, 15, 15, 10, 10,  6, 15,  0,  6, 10, 10,  2,  2,  2,  6,  2,\n        2,  2,  2,  0, 10,  2, 13,  0, 13,  6, 15,  0, 15, 10, 15, 15, 15,\n       15,  6, 10, 15, 10,  0, 10,  2, 15,  0,  5, 15, 15,  0,  0,  0, 15,\n       10,  2,  0, 10,  3, 10,  2,  5,  2, 13, 15, 15,  2,  6,  6,  2,  0,\n       15, 10, 15, 15,  0, 15,  2, 15, 13, 10,  6, 13, 15,  0, 10, 10, 10,\n        0, 15,  6, 10,  6,  8,  6, 15, 15, 15, 10, 15,  2, 10, 10,  6,  0,\n        0,  6, 10,  0, 15, 15, 13,  0,  2,  6, 15,  6,  2, 15, 15, 15,  6,\n        0, 15, 15, 15, 15, 10,  0,  6, 10,  3,  3,  0, 10])"
+      "text/plain": "[Pipeline(steps=[('scaler', MinMaxScaler()), ('predictor', LinearSVR())]),\n Pipeline(steps=[('scaler', MinMaxScaler()), ('predictor', LinearRegression())]),\n Pipeline(steps=[('scaler', MinMaxScaler()),\n                 ('predictor', DecisionTreeRegressor(max_depth=7))]),\n Pipeline(steps=[('scaler', MinMaxScaler()),\n                 ('predictor', RandomForestRegressor(max_depth=7))])]"
      },
-     "execution_count": 243,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "cross_val_score()"
    ],
    "metadata": {
     "collapsed": false,
@@ -1184,19 +1227,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 274,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[ 7.28008054, 12.32761987, 50.72547097, ..., 44.70693048,\n        19.95044273, 12.34285085],\n       [ 7.28008054, 12.32761987, 50.72547097, ..., 44.70693048,\n        19.95044273, 12.34285085],\n       [ 6.89008762,  7.07978604, 48.33121025, ..., 42.72266588,\n        16.56891004,  7.05205297],\n       ...,\n       [ 5.88127829,  4.6401657 , 51.0813129 , ..., 44.39322017,\n        11.37741263,  4.3015362 ],\n       [ 5.88127829,  4.6401657 , 51.0813129 , ..., 44.39322017,\n        11.37741263,  4.3015362 ],\n       [ 5.88127829,  4.6401657 , 51.0813129 , ..., 44.39322017,\n        11.37741263,  4.3015362 ]])"
+      "text/plain": "                       Evident Features  Calculable Features  Hard Features\nLinearSVR                      0.071101            -0.055117      -0.163039\nLinearRegression              -1.040497            -1.989916      -2.103785\nDecisionTreeRegressor         -1.102077            -2.877570      -2.914840\nRandomForestRegressor         -1.075316            -2.769801      -2.834287",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Evident Features</th>\n      <th>Calculable Features</th>\n      <th>Hard Features</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>LinearSVR</th>\n      <td>0.071101</td>\n      <td>-0.055117</td>\n      <td>-0.163039</td>\n    </tr>\n    <tr>\n      <th>LinearRegression</th>\n      <td>-1.040497</td>\n      <td>-1.989916</td>\n      <td>-2.103785</td>\n    </tr>\n    <tr>\n      <th>DecisionTreeRegressor</th>\n      <td>-1.102077</td>\n      <td>-2.877570</td>\n      <td>-2.914840</td>\n    </tr>\n    <tr>\n      <th>RandomForestRegressor</th>\n      <td>-1.075316</td>\n      <td>-2.769801</td>\n      <td>-2.834287</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 239,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "T"
+    "time_models_results"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.78813718, 0.84304849, 0.82696815, 0.82779756, 0.66373898])"
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(time_pipeline, X2, y2, cv=5)"
    ],
    "metadata": {
     "collapsed": false,
